@@ -58,6 +58,8 @@
 - NEW: new areo look of the dialogs. (Stefan)
 - NEW: column showing the copyfrom-revision in the 
        status list control. (Stefan)
+- NEW: The merge dialog warns now if the target working copy
+       has local modifications. (Stefan)
 - BUG: Merged revisions must be counted only once in stats (Stefan Fuhrmann)
 
 Version 1.6.7
